# wf-plugin-template

./: README.md  install.sh  meson.build  meson_options.txt
src/: template-plugin.cpp
